--- a/WebContent/html5/admin/index.html
+++ b/WebContent/html5/admin/index.html
@@ -19,8 +19,8 @@
     <script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
 	<!-- Vaadin -->
-	<script src='https://cdn.vaadin.com/vaadin-elements/latest/webcomponentsjs/webcomponents-lite.js'></script>
-  	<link href='https://cdn.vaadin.com/vaadin-elements/latest/vaadin-grid/vaadin-grid.html' rel='import'>
+  	<script src='https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js'></script>
+  	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.10/css/jquery.dataTables.min.css">
 </head>
 <body>
     <div id="header">
