--- a/WebContent/html5/admin/produtos2.html
+++ b/WebContent/html5/admin/produtos2.html
@@ -7,99 +7,39 @@
 <body>
 <div class="container">
 <h2>Lista de Produtos</h2>
-<vaadin-grid  selection-mode="multi" frozen-columns="1">
-  <table>
-  	<colgroup>
-      <col name="id" header-text="Código">
-      <col name="nome" header-text="Nome">
-      <col name="descricao" header-text="Descrição">
-      <col name="tipo" header-text="Tipo">
-      <col name="preco" header-text="Preço">
-    </colgroup>
-  </table>
-</vaadin-grid>
+<table id="example" class="display" cellspacing="0" width="100%"> 
+</table>
+<button id="meubotao">CHECAR</button>
 </div>
 <script>
-  var produtolist = [];
-  deletar = [];
-  
-  lista();
-  function lista() { //Pega a lista dos produtos do banco de dados
-		var list = "http://localhost:8080/VirtualQueue/VQ/produto/list";
-		$.ajax({
-			type : 'GET',
-			url : list,
-			crossDomain : true,
-			dataType : "json",
-			success : geraTabela, // função de retorno dos produtolist
-			error : function(xhr, status, error) {
-				var err = eval("(" + xhr.responseText + ")");
-				alert(err.Message);
-			}
-		});
-	}
-  
-  function geraTabela(data) { // Gera a tabela com os dados coletados
-		produtolist = data;
-		var grid = grid || document.querySelector("vaadin-grid");
-		if(produtolist.length != 0){ // Botão de deletar
-	  		grid.header.addRow(0, ["","<button id='delete' class='btn btn-default' onclick='deletarProduto(deletar)'>Deletar</button>"]);
-		}
-		HTMLImports.whenReady(function() {
-		    grid.items = produtolist;
-		    // Setando as colunas
-		    grid.columns[0].name = "id";
-		    grid.columns[1].name = "nome";
-		    grid.columns[2].name = "descricao";
-		    grid.columns[3].name = "tipo";
-		    grid.columns[4].name = "preco";
-		});
-		// Evento de seleção do checkbox
-		grid.addEventListener("select", function() {
-			  deletar = [];
-			  grid.selection.selected(function(index) {
-			    if(index != null)			    
-			      deletar.push(produtolist[index].id);
-			      console.log(deletar);
-			  });
-		});
-  } 
-  
-  function deletarProduto(deletar){
-		if (deletar.length == 0) {
-			swal("","Selecione ao menos um produto...")
-		} else {
-			swal({   
-				title: "",   
-				text: "Deseja realmente deletar este produto?\n (esta ação não poderá ser desfeita)",   
-				type: "",   
-				showCancelButton: true,
-				confirmButtonColor: "#141E5F",   
-				confirmButtonText: "Sim",   
-				cancelButtonText: "Não",   
-				closeOnConfirm: false,   
-				closeOnCancel: true }, 
-				function(isConfirm){   
-					if (isConfirm) {
-						deletar.forEach(function(value) { //Remove do banco de dados cada produto selecionado
-							$.ajax({
-							     type: "POST",
-							     url: "http://localhost:8080/VirtualQueue/VQ/produto/deleta",
-							     data: JSON.stringify(value),
-							     contentType: "application/json; charset=utf-8",
-							     dataType: "json",
-							     processData: true,
-							     success: function (vdata, status, jqXHR) {
-							    	 window.location = "produtos.html";
-							     },
-							     error: function (xhr) {
-							         alert("Erro" + xhr.responseText);
-							     }
-							});
-						});
-			}});
-		}
-	}
+$(document).ready(function(){
+	$.getJSON( "http://localhost:8080/VirtualQueue/VQ/produto/list", function( data ) {
+		  var produtolist = data;
+		  var table = $('#example').dataTable( {
+			    "aaData": produtolist,
+			    "aoColumns": [
+			      { "sTitle": "Código",   "mData": "id" },
+			      { "sTitle": "Nome",  "mData": "nome" },
+			      { "sTitle": "Descrição", "mData": "descricao" },
+			      { "sTitle": "Tipo",  "mData": "tipo" },
+			      { "sTitle": "Preço",    "mData": "preco" }
+			    ]
+			  } );
+		  $('#example tbody').on( 'click', 'tr', function () {
+		        if ( $(this).hasClass('selected') ) {
+		            $(this).removeClass('selected');
+		        }
+		        else {
+		            table.$('tr.selected').removeClass('selected');
+		            $(this).addClass('selected');
+		        }
+		    } );
+		 
+		    $('#meubotao').click( function () {
+		        console.log(table.row('.selected'));
+		    } );
+	});
+}); 
 </script>
 </body>
 </html>
